Fix task and project overflow issues
Corrected issues where page layout would mess up when the amount of
tasks or projects went beyond the available screen space.

--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,9 @@ header {
     display: flex;
     position: sticky;
     top: 0;
+    width: 100%;
     background-color: white;
+    border-bottom: solid 0.5px rgb(160, 160, 160);
     box-shadow: 0 0rem 0.5rem black;
 }
 
@@ -52,7 +54,6 @@ ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    height: 100%;
 }
 
 button {
@@ -92,20 +93,26 @@ select:focus {
     display: grid;
     grid-template-columns: 1fr 4fr;
     height: 100%;
+    overflow: hidden;
 }
 
 #sidebar {
+    border-right: solid 0.5px rgb(160, 160, 160);
     box-shadow: 0 0rem 0.5rem black;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 1rem 0;
+    gap: 1rem;
+    overflow: hidden;
+    padding-bottom: 1rem;
 }
 
 #sidebar-nav-items {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    padding-top: 1rem;
+    overflow: auto;
 }
 
 .sidebar-item,
@@ -143,7 +150,7 @@ select:focus {
 .icon-btn {
     border: none;
     height: 1.3rem;
-    opacity: 0.5;
+    opacity: 0.35;
     width: 1.3rem;
 }
 
@@ -208,6 +215,8 @@ select:focus {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    max-height: 100%;
+    overflow: auto;
     padding: 1.5rem 1rem;
 }
 
